--- a/backSigelab/.env
+++ b/backSigelab/.env
@@ -2,8 +2,8 @@ PORT=4000
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=sigelab
-DB_PASSWORD=Anjeli25
+DB_PASSWORD=Jdpa1
 EMAIL_USER=sigelab772@gmail.com
 EMAIL_PASS=hrnx zxat agpa eqfg
 DB_PORT=5432
-JWT_SECRET=ARH04*
+JWT_SECRET=Jdparra2004*
